# 42musaev

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/core/: config.py
app/schemas/: user.py
auth/: .auth-env  Dockerfile  main.py  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 5fe836c85c3e_init.py  ae9bf91362c4_init.py
auth/api/: auth.py
auth/core/: config.py
auth/crud/: refresh_session_crud.py
auth/db/: __init__.py  db_helper.py
auth/models/: refresh_session.py
auth/services/: token.py
env/: .env.auth  .env.rabbitmq  .env.users
nginx/: nginx.conf
users/: Dockerfile  main.py
users/alembic/: env.py
users/alembic/versions/: 34e736acc4ae_init.py
users/api/: __init__.py  users.py
users/certs/: jwt-public.pem
users/core/: config.py
users/crud/: users.py
users/dumps/: run_psql.sh  users.sql
users/models/: __init__.py  user.py
users/schemas/: users.py
users/services/: users.py
